# hasta-recognition

./: .gitignore  AGENTS.md  AndroidML_HandGestureRecognitionModelTraining.ipynb  README.md  TODOS.md  app.py  browser.py  extract_keypoints.py  geometry_features.py  main.py  pyproject.toml  train_xgboost_classifier.py
.mplconfig/: fontlist-v390.json
models/: xgboost_hand_classifier_labels.json
