[project]
name = "hasta-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.9,<3.12"
dependencies = [
    "flask>=3.1.3",
    "mediapipe>=0.10.33",
    "pyside6>=6.10.2",
    "scikit-learn>=1.6.1",
    "xgboost>=2.1.4",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]
